# ros2-lab

./: .gitignore  README.md  README_workflow.md  code_backup.txt  my_map.pgm  my_map.yaml  my_map_race.pgm  my_map_race.yaml  project_setup.md  turtle_bot_controller.py
csv_output/: amcl_pose.csv  cmd_vel.csv  initialpose.csv  odom.csv
dataset/: 20_08__nn_controller.pt  20_08__nn_controller_2.pt  all_data_merged.csv  all_data_merged_2025-08-13_14-17-41.csv  code.txt  convert_rosbag_to_csv.py  dataset.csv  new_da_2025-08-20_16-28-01.csv  new_da_2025-08-22_15-21-11.csv  new_da_2025-08-22_16-45-41.csv  new_race_data_2025-08-20_13-51-06.csv  nn_controller.pt  race_track_world.txt  train_controller.py
dataset/all_data_bag/: all_data_bag_0.mcap  metadata.yaml
dataset/bags/my_bag_race_data_4/: metadata.yaml  my_bag_race_data_4_0.mcap
dataset/bags/my_bag_race_data_5/: metadata.yaml
dataset/bags/my_bag_race_data_6/: metadata.yaml  my_bag_race_data_6_0.mcap
dataset/my_bag_race_data_1/: metadata.yaml  my_bag_race_data_1_0.mcap
dataset/nav_data/: metadata.yaml  nav_data_0.mcap
install/: local_setup.sh  setup.sh
install/obstacle_avoidance_nav2/share/obstacle_avoidance_nav2/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/simple_path_planner/share/simple_path_planner/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
my_bag_race_data/: metadata.yaml  my_bag_race_data_0.mcap
src/imitation_control_package/: package.xml  setup.cfg  setup.py
src/imitation_control_package/imitation_control_package/: 13_08__nn_controller.pt  20_08__nn_controller.pt  imitation_control_package.py  new_nn_controller.pt
src/imitation_control_package/models/: nn_controller.pt
src/obstacle_avoidance_controller/: package.xml  setup.cfg  setup.py
src/obstacle_avoidance_controller/obstacle_avoidance_controller/: nav2_node.py
src/obstacle_avoidance_nav2/: setup.cfg  setup.py
src/obstacle_avoidance_nav2/obstacle_avoidance_nav2/: nav2_node.py
src/ros2_gz_bridges/: package.xml  setup.cfg  setup.py
src/ros2_gz_bridges/launch/: bridge_matched_topics.launch.py
src/simple_path_planner/: setup.cfg  setup.py
(+21 files in other folders)
