<?xml version="1.0"?>
<package format="3">
  <name>nn_controller</name>
  <version>0.0.1</version>
  <description>Neural network-based controller for ROS 2</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- ROS 2 dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <!-- Python and PyTorch are assumed to be installed in the environment -->
  <exec_depend>python3</exec_depend>

  <!-- Export section -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
