<?xml version="1.0"?>
<package format="3">
  <name>obstacle_avoidance_nav2</name>
  <version>0.0.1</version>
  <description>Standalone Nav2 obstacle avoidance node</description>

  <maintainer email="projectlab3_ss25@todo.todo">projectlab3_ss25</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf_transformations</depend>
  <depend>nav2_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>builtin_interfaces</depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
