<?xml version="1.0"?>
<package format="3">
  <name>simple_path_planner</name>
  <version>0.0.0</version>
  <description>A simple ROS2 node that plans a path using Nav2</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- buildtool_depend stays ament_cmake even for ament_python -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- runtime dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
